<resources>
    <string name="app_name">Мира</string>
    <string name="app_name_ip">Мира</string>
    <string name="default_name">Мира</string>

    <string name="acquaintance_title_1">Привет,\n меня зовут Мира</string>
    <string name="acquaintance_text_1">Я рада познакомиться с тобой!\n\n
В этом приложении я буду другом и помощником в исследовании твоих эмоций.\n\n
Давай сразу перейдем на ты – это важный аспект доверительного общения.</string>

    <string name="acquaintance_title_2">Для чего\nэто приложение?</string>
    <string name="acquaintance_text_2">На протяжении жизни мы все испытывем самые разные эмоции и не всегда замечаем, какие обстоятельства их вызывают.\n\n
Чтобы лучше разобраться в себе и в своей жизни, научиться жить в гармонии с собой, было создано это пространство.</string>

    <string name="acquaintance_title_3">Что мы будем\nделать?</string>
    <string name="acquaintance_text_3">Будем разговаривать друг с другом.\n\n
Ты будешь делиться со мной своими эмоциями.\n\n
Я буду давать тебе особые упражнения, которые помогут разобраться в себе и найти гармонию.</string>

    <string name="acquaintance_title_4">Как мы будем\nвзаимодействовать?</string>
    <string name="acquaintance_text_4">В любой момент ты сможешь рассказать мне о своих эмоциях, ответив всего на 2 вопроса:\n\n
Что ты чувствуешь?\n
С чем это связано?\n\n
После я смогу предложить тебе подходящую технику, а также всегда буду формировать статистику твоего состояния.</string>

    <string name="acquaintance_title_5">Если у тебя\nесть диагноз</string>
    <string name="acquaintance_text_5">Должна предупредить, что если у тебя есть подтвержденный диагноз психического или неврологического заболевания, то необходимо проконсультироваться со своим лечащим врачом.</string>

    <string name="acquaintance_title_6">Вперед\nв приложение</string>
    <string name="acquaintance_text_6">Помни, что эффект от подобных техник приходит не сразу.\n\n
Пусть общение со мной войдет в привычку, и со временем ты более явно станешь ощущать позитивное влияние от нашего взаимодействия.</string>
    <string name="image_description_button_next">Следующая страница</string>
    <string name="image_description_button_previous">Предыдущая страница</string>

    <string name="skip"><u>пропустить</u></string>
    <string name="complete"><u>завершить</u></string>
    <string name="whats_name">Как к Вам\n<b>обращаться</b>?</string>
    <string name="confirm">Подтвердить</string>
    <string name="enter_name">Укажите Имя</string>
    <string name="wantAcquainted">Хочешь ли ты познакомиться и узнать,\nкак работает приложение?\n\n К этой части можно вернуться в любой\n момент из раздела “Упражнения”.</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="to_greeting">Познакомиться</string>
    <string name="info_minimum_2_letter">минимум 2 символа</string>
    <string name="alert_double_tap_exit">Нажми дважды для выхода из приложения</string>
    <string name="joy">радость</string>
    <string name="calmness">спокойствие</string>
    <string name="satisfaction">удовлетворение</string>
    <string name="interest">интерес</string>
    <string name="confidence">уверенность</string>
    <string name="sympathy">симпатия</string>
    <string name="delight">восхищение</string>
    <string name="love">любовь</string>
    <string name="sadness">грусть</string>
    <string name="fatigue">усталость</string>
    <string name="anxiety">тревога</string>
    <string name="irritation">раздражение</string>
    <string name="fear">страх</string>
    <string name="depression">подавленность</string>
    <string name="disappointment">разочарование</string>
    <string name="anger">злость</string>
    <string name="tittle_who_do_you_feel">Как ты себя чувствуешь?</string>
    <string name="house">дом</string>
    <string name="job">работа</string>
    <string name="family">семья</string>
    <string name="partner">партнер</string>
    <string name="society">общество</string>
    <string name="studies">учеба</string>
    <string name="friends">друзья</string>
    <string name="rest">отдых</string>
    <string name="hobby">хобби</string>
    <string name="sport">спорт</string>
    <string name="health">здоровье</string>
    <string name="creation">творчество</string>
    <string name="note_text">Текст заметки</string>
    <string name="label_factors">Можно описать подробнее день и события, повлиявшие на твоё состояние</string>
    <string name="button_save">Сохранить</string>
    <string name="bubble_1">Выбери одно из чувств, которое ты сейчас испытываешь в большей степени, чем другие</string>
    <string name="bubble_2">…</string>
    <string name="bubble_3">"Я чувствую "</string>
    <string name="bubble_4">Выбери один или несколько факторов, повлияших на твое состояние</string>
    <string name="pop_up_check_in_title">Закрыть окно</string>
    <string name="pop_up_check_in_content">Данные не будут сохранены. Ты точно хочешь прервать запись?</string>
    <string name="pop_up_check_in_left">Остаться</string>
    <string name="pop_up_check_in_right">Закрыть</string>
    <string name="label_check_in_saved_1">Все записи и статистика доступны на главном экране приложения.</string>
    <string name="label_check_in_saved_2">Под твое состояние подобрано особое упражнение. После загрузки оно появится в разделе «Упражнения», и ты сможешь выполнить его в любой момент.</string>
    <string name="button_later">Позже</string>
    <string name="button_execute_exercises">Выполнить упражнение</string>
    <string name="bubble_5">Сегодня, %1$s, я чувствую %2$s. Основная причина – %3$s.</string>
    <string name="bubble_6">Спасибо за доверие!</string>
    <string name="sympathy_parent_case">симпатию</string>
    <string name="anxiety_parent_case">тревогу</string>
    <string name="action_bar_date_label">Выбранный период</string>
    <string name="pop_up_home_title">Удаление записей</string>
    <string name="pop_up_home_content">Ты точно хочешь безвозвратно удалить выбранные записи?</string>
    <string name="pop_up_home_left">Отменить</string>
    <string name="pop_up_home_right">Удалить</string>
    <string name="label_hi">Привет</string>
    <string name="label_info_1">"Пока что здесь пусто\nНачни записывать свои ощущения ежедневно, это поможет разобраться в себе"</string>
    <string name="label_info_2">"За выбранный период нет записей\nВыбери другие даты, используя календарь"</string>
    <string name="tittle_settings">Настройки</string>
    <string name="button_save_change">Сохранить изменения</string>
    <string name="about_project"><u>О проекте</u></string>
    <string name="share"><u>Поделиться</u></string>
    <string name="button_change_saved">Изменения сохранены</string>
    <string name="calendar_tittle">Начало - Конец</string>
    <string name="calendar_positive_button">Показать</string>
    <string name="calendar_negative_button">Отмена</string>
    <string name="label_feeling">Чувство</string>
    <string name="no_entry">нет записей</string>
    <string name="clip_date">Дата</string>
    <string name="clip_feel">Чувство</string>
    <string name="clip_factor">Что повлияло</string>
    <string name="clip_note">Комментарий</string>
    <string name="pop_up_save_success">Текст заметки обновлен</string>
    <string name="pop_up_copy_success">Текст записи скопирован в буфер обмена</string>
    <string name="pop_up_detail_confirm_title">Удаление записи</string>
    <string name="pop_up_detail_confirm_content">Ты точно хочешь безвозвратно удалить выбранную запись?</string>
    <string name="pop_up_detail_confirm_left_button">Отменить</string>
    <string name="pop_up_detail_confirm_right_button">Удалить</string>
    <string name="pop_up_detail_delete_title">Запись удалена</string>
    <string name="pop_up_detail_delete_content">Выбранная запись удалена\nс твоего устройства</string>
    <string name="pop_up_detail_delete_button">Закрыть окно</string>
    <string name="tittle_statistic">Статистика</string>
    <string name="label_factor">Что повлияло</string>
    <string name="version_name">Версия: V%1$s</string>
    <string name="statistic_info">Шкала отображает соотношение положительных и отрицательных эмоций по каждому из факторов за выбранный период.</string>
    <string name="statistic_notice">За выбранный период нет записей\nВыбери другие даты, используя календарь</string>
    <string name="statistic_factor_name">/ %1$s</string>
    <string name="statistic_label">Записей с фактором</string>
    <string name="statistic_label_count_period">за выбранный период</string>
    <string name="statistic_label_count_total">за всё время</string>
    <string name="input_symbol_filter">-abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя</string>
    <string name="about_app">О приложении</string>
    <string name="label_exercise">Упражнения</string>
    <string name="exercise_sub_head">Выполняй упражнения, чтобы улучшить свое эмоциональное состояние</string>
    <string name="pop_up_loading_body_1">Сейчас не удалось\n загрузить Знакомство</string>
    <string name="pop_up_loading_button_1">Пока пропустить</string>
    <string name="imageview_content_progress_bar">Анимация загрузки</string>
    <string name="loading_exercise">Идет загрузка упражнения...</string>
    <string name="error_loading_exercise">Не удалось загрузить :(</string>
    <string name="exercise_start_subhead">Подходит при состояниях</string>
    <string name="start">Начать</string>
    <string name="button_close">Закрыть</string>
    <string name="image_view_content_exercise_preview">Exercise preview</string>
    <string name="label_exercise_not_found">Сейчас упражнений не нашлось</string>
    <string name="label_empty">Пока что здесь пусто\nНачни записывать свои ощущения ежедневно, чтобы получать доступ к упражнениям</string>
    <string name="label_exercise_loading_error">Не удалось загрузить данные\nВозможно, проблема с интернет-соединением</string>
    <string name="update"><u>Обновить</u></string>
    <string name="pop_up_loading_body_2">Не удалось загрузить упражнение</string>
    <string name="pop_up_loading_button_2">Закрыть</string>
    <string name="pop_up_loading_body_3">Не получилось загрузить контент приложения. Проверь подключение
к интернету или попробуй позже</string>
    <string name="pop_up_error_loading">Загрузка не удалась</string>
    <string name="loading_data">загружаем данные...</string>
    <string name="shared_text">Познакомьтесь с приложением «Мира» – трекером эмоций с возможностью выполнять особые упражнения для улучшения своего состояния https://mira-mobile-app.vercel.app/</string>
    <string name="pop_up_home_title_after_delete">Записи удалены</string>
    <string name="pop_up_home_content_after_delete">Выбранные записи удалены\nс твоего устройства</string>
    <string name="pop_up_home_button_after_delete">Закрыть окно</string>

</resources>