<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentAcquaintance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/width_margin_16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="@dimen/width_margin_16dp_from_end" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        style="@style/Links16Primary"
        app:layout_constraintVertical_bias="0.053"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnSkip"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintBottom_toTopOf="@id/indicator">
    </androidx.viewpager2.widget.ViewPager2>

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:ci_height="12dp"
        app:ci_width="12dp"
        app:ci_animator="@animator/alpha"
        app:ci_drawable="@drawable/indicator_selected"
        app:ci_drawable_unselected="@drawable/indicator_unselected"
        app:layout_constraintVertical_bias="@dimen/greeting_button_1_bias"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_arrow"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/indicator"
        app:layout_constraintBottom_toBottomOf="@id/indicator"
        app:layout_constraintEnd_toEndOf="@id/end"
        android:contentDescription="@string/image_description_button_next" />

    <ImageButton
        android:id="@+id/btnSkip2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/check_mark"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/indicator"
        app:layout_constraintBottom_toBottomOf="@id/indicator"
        app:layout_constraintEnd_toEndOf="@id/end"
        android:contentDescription="@string/image_description_button_next" />

    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_arrow"
        android:background="@android:color/transparent"
        android:rotation="180"
        app:layout_constraintTop_toTopOf="@id/indicator"
        app:layout_constraintBottom_toBottomOf="@id/indicator"
        app:layout_constraintStart_toStartOf="@id/start"
        android:contentDescription="@string/image_description_button_previous" />

</androidx.constraintlayout.widget.ConstraintLayout>