<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentExercisesStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/check_in_frag_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/width_margin_16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="@dimen/width_margin_16dp_from_end" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/button_close_size"
        android:layout_height="@dimen/button_close_size"
        android:layout_marginTop="36dp"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/exerciseName"
        style="@style/TitleBold18Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"
        tools:text="Название упражнения" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageViewBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:src="@drawable/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/preview"
        app:layout_constraintEnd_toEndOf="@id/preview"
        app:layout_constraintStart_toStartOf="@id/preview"
        app:layout_constraintTop_toTopOf="@id/preview" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_view_content_exercise_preview"
        app:layout_constraintBottom_toTopOf="@id/imageViewBarrier"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/exerciseName" />

    <TextView
        android:id="@+id/subhead"
        style="@style/Buttons16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exercise_start_subhead"
        android:textColor="@color/dark"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/imageViewBarrier" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emotionContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/subhead">


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:flow_horizontalGap="10dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_verticalBias="0"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/startButton"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/emotionContainer">

            <TextView
                android:id="@+id/description"
                style="@style/Body14Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:text="@tools:sample/lorem/random" />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            style="@style/Button16White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_background"
            android:text="@string/start"
            app:backgroundTint="@color/button_background_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start" />

    </androidx.constraintlayout.widget.ConstraintLayout>